--- a/floorp/tsconfig.json
+++ b/floorp/tsconfig.json
@@ -4,8 +4,8 @@
     "include": ["./@types/index.d.ts"]
   },
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
+    "target": "es2017",
+    "module": "ESNext",
     "moduleDetection": "force",
     "allowJs": true,
     "declaration": true,
@@ -15,11 +15,12 @@
       "@xpcom/*": ["./@types/firefox/xpcom/*"],
       "@third_party/*": ["./third_party/*"],
       "chrome://browser/content/*": ["./browser/base/content/*"],
-      "resource://floorp/modules/*": ["./browser/components/*"],
+      "resource:///modules/*": ["./browser/components/*"],
       "chrome://floorp/content/third_party/qr-code-styling.js": [
         "./third_party/qr-code-styling@1.5.0/qr-code-styling.js"
       ]
     },
+    "lib": ["ES2023", "dom"],
     "plugins": [
       // Transform paths in output .js files
       { "transform": "typescript-transform-paths" },
