--- a/floorp/browser/extensions/webextensions/floorp-system/shared/manifest.json
+++ b/floorp/browser/extensions/webextensions/floorp-system/shared/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Floorp System Extension",
-  "description": "Floorp System Extension. Includes a download notifier, a update notifier, a webcompat injector",
-  "version": "1.3",
+  "name": "Midori System Extension",
+  "description": "Midori System Extension. Includes a download notifier, a update notifier, a webcompat injector",
+  "version": "1.3.1",
   "homepage_url": "https://ablaze.one",
   "permissions": [
     "notifications",
