--- a/floorp/browser/extensions/webextensions/floorp-system/shared/manifest.json
+++ b/floorp/browser/extensions/webextensions/floorp-system/shared/manifest.json
@@ -3,7 +3,7 @@
   "name": "Midori System Extension",
   "description": "Midori System Extension. Includes a download notifier, a update notifier, a webcompat injector",
   "version": "1.3.1",
-  "homepage_url": "https://ablaze.one",
+  "homepage_url": "https://astian.org/midori-browser",
   "permissions": [
     "notifications",
     "tabs",
