--- a/floorp/browser/components/search/extensions/astiango/manifest.json
+++ b/floorp/browser/components/search/extensions/astiango/manifest.json
@@ -19,7 +19,7 @@
       "search_provider": {
         "name": "AstianGO",
         "keyword": "@astiango",
-        "search_url": "https://astiango.co/q={searchTerms}",
+        "search_url": "https://astiango.co/search/web={searchTerms}",
         "favicon_url": "favicon.ico",
         "suggest_url": "https://ac.duckduckgo.com/ac/",
       "suggest_url_get_params": "q={searchTerms}&type=list"
