--- a/.github/workflows/wrapper_linux-build.yml
+++ b/.github/workflows/wrapper_linux-build.yml
@@ -24,3 +24,5 @@ jobs:
     uses: ./.github/workflows/linux-build.yml
     with:
       aarch64: ${{inputs.aarch64}}
+    secrets:
+        PAT: ${{ secrets.PAT }}
