--- a/browser/installer/windows/nsis/defines.nsi.in
+++ b/browser/installer/windows/nsis/defines.nsi.in
@@ -53,12 +53,12 @@
 ; private_browsing.exe (as opposed to @MOZ_APP_NAME@.exe)
 !define IDI_PBICON_PB_EXE_ZERO_BASED "0"
 
-!define CERTIFICATE_NAME            "Open Source Developer, Ryosuke Asano"
-!define CERTIFICATE_ISSUER          "Certum Code Signing 2021 CA"
+!define CERTIFICATE_NAME            "Astian, Inc"
+!define CERTIFICATE_ISSUER          "DigiCert Trusted G4 Code Signing RSA4096 SHA384 2021 CA1"
 ; Changing the name or issuer requires us to have both the old and the new
 ;  in the registry at the same time, temporarily.
-!define CERTIFICATE_NAME_PREVIOUS   "Open Source Developer, Ryosuke Asano"
-!define CERTIFICATE_ISSUER_PREVIOUS "Certum Code Signing 2021 CA"
+!define CERTIFICATE_NAME_PREVIOUS   "Astian, Inc"
+!define CERTIFICATE_ISSUER_PREVIOUS "DigiCert SHA2 Assured ID Code Signing CA"
 
 # LSP_CATEGORIES is the permitted LSP categories for the application. Each LSP
 # category value is ANDed together to set multiple permitted categories.
