fix problem with link support

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/goastian/midori-desktop/discussions/new?category=feature-request
     about: Suggest an idea for Midori.
   - name: User Support
-    url: https://t.me/midoriweb
+    url: https://help.astian.org
     about: Support for end-user.
