--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -63,7 +63,10 @@ on:
         value: ${{jobs.win-build.outputs.mar_name}}
       mar_size:
         value: ${{jobs.win-build.outputs.mar_size}}
-
+    secrets:
+      PAT:
+        description: "Personal Access Token"
+        required: false
 jobs:
   win-build:
     runs-on: ubuntu-latest
@@ -72,7 +75,7 @@ jobs:
       mar_size: ${{steps.gen-mar.outputs.MAR_SIZE}}
     steps:
     - name: Use Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: "lts/*"
     - name: Check Argument Compatibility
@@ -113,10 +116,11 @@ jobs:
         sudo perl -p -i -e 's%(deb(?:-src|)\s+)https?://(?!archive\.canonical\.com|security\.ubuntu\.com)[^\s]+%$1http://archive.ubuntu.com/ubuntu/%' /etc/apt/sources.list
         sudo apt update
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       name: Clone 🧬
       with:
         submodules: 'recursive'
+        token: ${{ secrets.PAT }}
 
     - name: Setup Disk & Swap Space 💿
       run: |
@@ -124,13 +128,13 @@ jobs:
         .github/workflows/src/disk_swap_for_github_runner.sh
 
     - name: Configure sccache
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         script: |
           core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
           core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       name: Download artifact if use profdata📥
       if: inputs.profdata_jarlog_artifact_name
       with:
@@ -140,7 +144,7 @@ jobs:
     - name: Setup 🪛
       run: |
         mkdir -p ~/win-cross
-        
+
         if [[ $GHA_aarch64 == 'true' ]]; then
           cp ./.github/workflows/src/windows/aarch64/mozconfig_win_aarch64_pgo_base mozconfig
         elif [[ $GHA_32bit == 'true' ]]; then
@@ -204,13 +208,20 @@ jobs:
 
     - name: setup Rust 🦀
       run: |
+
+        #? install rust version 1.77.2
+        rustup toolchain install 1.77.2
+
         if [[ $GHA_aarch64 == 'true' ]];then
-          rustup target add aarch64-pc-windows-msvc
+          rustup target add aarch64-pc-windows-msvc --toolchain 1.77.2
         elif [[ $GHA_32bit == 'true' ]];then
-          rustup target add i686-pc-windows-msvc
+          rustup target add i686-pc-windows-msvc --toolchain 1.77.2
         else
-          rustup target add x86_64-pc-windows-msvc
+          rustup target add x86_64-pc-windows-msvc --toolchain 1.77.2
         fi
+
+        #? set default toolchain
+        rustup default 1.77.2
 
         #? https://github.com/mozilla/sccache#known-caveats
         export CARGO_INCREMENTAL=0
@@ -221,8 +232,8 @@ jobs:
     - name: Change update url if beta
       if: inputs.beta
       run: |
-       sed -i 's|https://@MOZ_APPUPDATE_HOST@/browser/%DISPLAY_VERSION%/%OS%/%ARCH%/update.xml|https://@MOZ_APPUPDATE_HOST@/browser/beta/%OS%/%ARCH%/update.xml |g' ./build/application.ini.in
-  
+        sed -i 's|https://@MOZ_APPUPDATE_HOST@/browser/%DISPLAY_VERSION%/%OS%/%ARCH%/update.xml|https://@MOZ_APPUPDATE_HOST@/browser/beta/%OS%/%ARCH%/update.xml |g' ./build/application.ini.in
+
     #On Package, if not copies, error occur
     - name: Copy l10n files if beta
       if: inputs.beta
@@ -250,7 +261,7 @@ jobs:
         ./mach build
       env:
         GHA_MOZ_BUILD_DATE: ${{inputs.MOZ_BUILD_DATE}}
-        
+
     - name: Retry Build if 1st build is failed 🔨
       if: failure()
       run: |
@@ -263,7 +274,6 @@ jobs:
         GHA_MOZ_BUILD_DATE: ${{inputs.MOZ_BUILD_DATE}}
 
     - name: Package 📦
-
       run: |
         if [[ -n $GHA_MOZ_BUILD_DATE ]];then
           export MOZ_BUILD_DATE=$GHA_MOZ_BUILD_DATE
@@ -344,7 +354,7 @@ jobs:
         GHA_default_name: midori-windows-${{fromJson('["x86","aarch"]')[inputs.aarch64]}}${{fromJson('["_64",""]')[inputs.build32bit]}}-${{fromJson('["package","build-with-profgen"]')[inputs.profgen]}}${{fromJson('["","-zstd"]')[inputs.zstd]}}
 
     - name: Publish Package🎁
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{env.ARTIFACT_NAME}}
         path: ~/output
