--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -41,6 +41,10 @@ on:
       release-note-url-ja:
         type: string
         required: false
+    secrets:
+      PAT:
+        description: "Personal Access Token for checkout"
+        required: false
     outputs:
       mar_name:
         value: ${{jobs.linux-build.outputs.mar_name}}
@@ -82,9 +86,16 @@ jobs:
 
     - name: setup Rust 🦀
       run: |
+
+        #? install rust version 1.77.2
+        rustup toolchain install 1.77.2
+
         if [[ $GHA_aarch64 == 'true' ]];then
-          rustup target add aarch64-unknown-linux-gnu
+          rustup target add aarch64-unknown-linux-gnu --toolchain 1.77.2
         fi
+
+        #? set default toolchain
+        rustup default 1.77.2
 
         #? https://github.com/mozilla/sccache#known-caveats
         export CARGO_INCREMENTAL=0
