--- a/.github/workflows/daily-build-with-update.yml
+++ b/.github/workflows/daily-build-with-update.yml
@@ -27,8 +27,9 @@ jobs:
     outputs:
       display-version: ${{ steps.get.outputs.display-version }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
+        token: ${{ secrets.PAT }}
         sparse-checkout: 'browser/config/version_display.txt'
     - name: Get Display Version
       id: get
@@ -40,7 +41,7 @@ jobs:
     outputs:
       inside-version: ${{ steps.get.outputs.inside-version }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         sparse-checkout: 'browser/config/version.txt'
     - name: Get Inside Version
@@ -69,7 +70,7 @@ jobs:
       profgen: true
       aarch64: false
       zstd: true
-
+  
   Part2-win-x86_64-gen-profdata-and-jarlog:
     needs: Part1-win-x86_64-build-with-profgen-zstd
     uses: ./.github/workflows/window-generate-profile-data-and-jarlog.yml
@@ -78,7 +79,7 @@ jobs:
      arch: x86_64
 
   Part3-win-x86_64-build-with-profdata-and-jarlog:
-    needs: [Part2-win-x86_64-gen-profdata-and-jarlog ,get-buildid]
+    needs: [Part2-win-x86_64-gen-profdata-and-jarlog, get-buildid]
     uses: ./.github/workflows/windows-build.yml
     with:
       aarch64: false
@@ -89,7 +90,7 @@ jobs:
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
 
   Part4-win-x86_64-gen-update-xml:
-    needs: [get-display-version, get-buildid, get-inside-version,Part3-win-x86_64-build-with-profdata-and-jarlog]
+    needs: [get-display-version, get-buildid, get-inside-version, Part3-win-x86_64-build-with-profdata-and-jarlog]
     runs-on: ubuntu-latest
     steps:
     - name: generate update XML file
@@ -120,7 +121,7 @@ jobs:
         MAR_SIZE: ${{needs.Part3-win-x86_64-build-with-profdata-and-jarlog.outputs.mar_size}}
 
     - name: Publish 🎁
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: update-xml-midori-win-x86_64
         path: |
@@ -167,7 +168,7 @@ jobs:
           MAR_NAME: ${{needs.Part1-build-linux-x86_64-PGO.outputs.mar_name}}
           MAR_SIZE: ${{needs.Part1-build-linux-x86_64-PGO.outputs.mar_size}}
       - name: Publish 🎁
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: update-xml-midori-linux-x86_64
           path: |
@@ -234,31 +235,31 @@ jobs:
         mkdir -p ~/downloads/artifacts/macOS-x64
 
     - name: download Linux x86_64 build artifact 📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: midori-linux-x64
         path: ~/downloads/artifacts/linux-x64
 
     - name: download Linux x86_64 build artifact 📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: update-xml-midori-linux-x86_64
         path: ~/downloads/artifacts/linux-x64
 
     - name: download Windows x86_64 build artifact📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: please-use-this-midori-windows-x86_64-package-build-with-profdata-and-jarlog
         path: ~/downloads/artifacts/windows-x64
 
     - name: download Windows x86_64 update xml📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: update-xml-midori-win-x86_64
         path: ~/downloads/artifacts/windows-x64
 
     - name: download macOS Universal build artifact📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: Universal-Artifact
         path: ~/downloads/artifacts/macOS-x64
@@ -275,10 +276,23 @@ jobs:
       run: |
         cd ~/downloads/artifacts/linux-x64
         mv midori-*.linux-x86_64.tar.bz2 midori-linux-x86_64.tar.bz2
+      
+    - name: Create hashes.txt file 📝
+      run: |
+        cd /home/runner/downloads/artifacts
+        touch hashes.txt
+        echo "SHA256 hashes" > hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
+        echo "Windows x86_64" >> hashes.txt
+        sha256sum windows-x64/midori-win64.installer.exe >> hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
+        echo "Linux x86_64" >> hashes.txt
+        sha256sum linux-x64/midori-linux-x86_64.tar.bz2 >> hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
 
     - name: Deploy to GitHub Releases 🚀
       id: create_release
-      uses: "softprops/action-gh-release@v1"
+      uses: softprops/action-gh-release@v2
       with:
         files: |
           /home/runner/downloads/artifacts/linux-x64/LINUX-x86_64.mar
@@ -290,18 +304,19 @@ jobs:
           /home/runner/downloads/artifacts/windows-x64/WINNT-x86_64.xml
           /home/runner/downloads/artifacts/linux-x64/LINUX-x86_64.xml
           /home/runner/downloads/artifacts/macOS-x64/DARWIN-Universal.xml
+          /home/runner/downloads/artifacts/hashes.txt
 
         tag_name: "beta"
         name: "Midori beta build: v${{ needs.get-display-version.outputs.display-version }} | ${{ needs.get-buildid.outputs.buildids }}"
         body: |
           "Midori Daylight": v${{ needs.get-display-version.outputs.display-version }} (Firefox v${{ needs.get-inside-version.outputs.inside-version }})
 
-          **This is NOT the release (stable) channel version of Midori. This is a beta build of Midori. It is intended for testing purposes only. It is not recommended that you use this version of Midori for daily browsing. If you would like to download the release version of Midori, please visit [astian.org](https://astian.org/midori-browser).**
+          **This is NOT the release (stable) channel version of Floorp. This is a beta build of Floorp. It is intended for testing purposes only. It is not recommended that you use this version of Floorp for daily browsing. If you would like to download the release version of Floorp, please visit [floorp.app](https://floorp.app).**
         draft: false
         prerelease: true
         token: ${{ github.token }}
       env:
-       GITHUB_REPOSITORY: ${{ github.repository }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
 
     - name: Upload update.xml file to Ablaze server 📤
       run: |
