--- a/.github/workflows/deployments.yml
+++ b/.github/workflows/deployments.yml
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Please write our copyright if you use this file.
-# © 2023 Midori Projects & Contributors
+# © 2023 Floorp Projects & Contributors
 
 #TODO deployments not changed about cache and refactoring
 
@@ -21,11 +21,11 @@ on:
         description: 'Release Note URL'
         type: string
         required: true
-        default: 'https://astian.org/midori-en/'
+        default: 'https://blog.ablaze.one/category/ablaze/ablaze-project/floorp/'
       release-note-url-ja:
         type: string
         required: false
-        default: 'https://astian.org/midori-en/'
+        default: 'https://blog.ablaze.one/category/ablaze/ablaze-project/floorp/'
 
 #----------------------------------------- JOBS -----------------------------------------#
 jobs:
@@ -34,8 +34,9 @@ jobs:
     outputs:
       display-version: ${{ steps.get.outputs.display-version }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
+        token: ${{ secrets.PAT }}
         sparse-checkout: 'browser/config/version_display.txt'
     - name: Get Display Version
       id: get
@@ -47,8 +48,9 @@ jobs:
     outputs:
       inside-version: ${{ steps.get.outputs.inside-version }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
+        token: ${{ secrets.PAT }}
         sparse-checkout: 'browser/config/version.txt'
     - name: Get Inside Version
       id: get
@@ -77,13 +79,17 @@ jobs:
       profgen: true
       aarch64: false
       zstd: true
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
   Part2-win-x86_64-gen-profdata-and-jarlog:
     needs: Part1-win-x86_64-build-with-profgen-zstd
     uses: ./.github/workflows/window-generate-profile-data-and-jarlog.yml
     with:
-      browser-artifact-name: midori-windows-x86_64-build-with-profgen-zstd
+      browser-artifact-name: floorp-windows-x86_64-build-with-profgen-zstd
       arch: x86_64
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
   Part3-win-x86_64-build-with-profdata-and-jarlog:
     needs: [Part2-win-x86_64-gen-profdata-and-jarlog, get-buildid]
@@ -91,24 +97,48 @@ jobs:
     with:
       aarch64: false
       beta: false
-      profdata_jarlog_artifact_name: "midori-windows-x86_64-profdata-and-jarlog"
-      out_artifact_name: please-use-this-midori-windows-x86_64-package-build-with-profdata-and-jarlog
+      profdata_jarlog_artifact_name: "floorp-windows-x86_64-profdata-and-jarlog"
+      out_artifact_name: please-use-this-floorp-windows-x86_64-package-build-with-profdata-and-jarlog
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
+      release-note-url-ja: ${{ inputs.release-note-url-ja }}
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
 ################################################################ ↑ Windows x86_64 Build ###################################################################################
 
-  Part1-win-x86-build-with-profdata-and-jarlog:
-    needs: [get-buildid]
+  Part1-win-x86-build-with-profgen-zstd:
+    uses: ./.github/workflows/windows-build.yml
+    with:
+      profgen: true
+      aarch64: false
+      build32bit: true
+      zstd: true
+    secrets:
+      PAT: ${{ secrets.PAT }}
+
+  Part2-win-x86-gen-profdata-and-jarlog:
+    needs: Part1-win-x86-build-with-profgen-zstd
+    uses: ./.github/workflows/window-generate-profile-data-and-jarlog.yml
+    with:
+      browser-artifact-name: floorp-windows-x86-build-with-profgen-zstd
+      arch: x86
+    secrets:
+      PAT: ${{ secrets.PAT }}
+  
+  Part3-win-x86-build-with-profdata-and-jarlog:
+    needs: [get-buildid, Part2-win-x86-gen-profdata-and-jarlog]
     uses: ./.github/workflows/windows-build.yml
     with:
       aarch64: false
       build32bit: true
       beta: false
-      out_artifact_name: please-use-this-midori-windows-x86-package-build-with-profdata-and-jarlog
+      out_artifact_name: please-use-this-floorp-windows-x86-package-build-with-profdata-and-jarlog
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
       release-note-url-ja: ${{ inputs.release-note-url-ja }}
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
 ################################################################ ↑ Windows x86 Build ####################################################################################
 
@@ -122,6 +152,8 @@ jobs:
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
       release-note-url-ja: ${{ inputs.release-note-url-ja }}
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
 ################################################################ ↑ Linux x86_64 Build ####################################################################################
   Part1-linux-aarch64-build:
@@ -134,10 +166,12 @@ jobs:
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
       release-note-url-ja: ${{ inputs.release-note-url-ja }}
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
 ################################################ ↑ Linux AArch64 Build ################################################
 
- #----------------------------------------- macOS -----------------------------------------#
+#----------------------------------------- macOS -----------------------------------------#
 
   Part1-macOS-Universal-build-with-profgen:
     uses: ./.github/workflows/macOS-Universal.yml
@@ -145,11 +179,14 @@ jobs:
       profgen: true
     secrets:
       MACOS_CROSS_TOOLS_KEY: ${{ secrets.MACOS_CROSS_TOOLS_KEY }}
+      PAT: ${{ secrets.PAT }}
 
   Part2-macOS-Universal-gen-profdata-and-jarlog:
     needs: Part1-macOS-Universal-build-with-profgen
     uses: ./.github/workflows/macOS-generate-profile-data-and-jarlog.yml
-  
+    secrets:
+      PAT: ${{ secrets.PAT }}
+
   Part3-macOS-Universal-build-with-profdata-and-jarlog:
     uses: ./.github/workflows/macOS-Universal.yml
     needs: [get-buildid,  Part2-macOS-Universal-gen-profdata-and-jarlog]
@@ -158,8 +195,10 @@ jobs:
       beta: false
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
+      release-note-url-ja: ${{ inputs.release-note-url-ja }}
     secrets:
       MACOS_CROSS_TOOLS_KEY: ${{ secrets.MACOS_CROSS_TOOLS_KEY }}
+      PAT: ${{ secrets.PAT }}
 
   Part4-macOS-Universal-package-and-sign:
     uses: ./.github/workflows/macOS-integration.yml
@@ -167,8 +206,8 @@ jobs:
     with:
       beta: false
       mar: true
-      x86_64_artifact_name: midori-mac-x86_64-package
-      aarch64_artifact_name: midori-mac-aarch64-package
+      x86_64_artifact_name: floorp-mac-x86_64-package
+      aarch64_artifact_name: floorp-mac-aarch64-package
       display_version: ${{needs.get-display-version.outputs.display-version}} 
       inside_version: ${{needs.get-inside-version.outputs.inside-version}}
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
@@ -179,18 +218,14 @@ jobs:
       macOS_AppleAccountId: ${{ secrets.macOS_AppleAccountId }}
       macOS_AppleTeamId: ${{ secrets.macOS_AppleTeamId }}
       macOS_AppleAccountAppSpecificPassword: ${{ secrets.macOS_AppleAccountAppSpecificPassword }}
+      PAT: ${{ secrets.PAT }}
 
 ####################################################################### macOS Universal #######################################################################
 
   Deploy-to-installer:
-    needs: [Part1-linux-x86_64-build-with-PGO, Part1-linux-aarch64-build, Part4-macOS-Universal-package-and-sign, Part3-win-x86_64-build-with-profdata-and-jarlog, get-display-version]
+    needs: [Part1-linux-x86_64-build-with-PGO, Part1-linux-aarch64-build, Part4-macOS-Universal-package-and-sign, Part3-win-x86_64-build-with-profdata-and-jarlog, Part3-win-x86-build-with-profdata-and-jarlog, get-display-version]
     runs-on: ubuntu-latest
-    environment: 
-      name: Deploy-to-installer-release
-
     steps:
-    - uses: actions/checkout@v3
-
     - name: Release version 📦
       run: |
         echo "Release version: ${{ needs.get-display-version.outputs.display-version }}"
@@ -205,31 +240,31 @@ jobs:
         mkdir -p ~/downloads/artifacts/macOS-x64
 
     - name: download Linux x86_64 build artifact 📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: midori-linux-x64
+        name: floorp-linux-x64
         path: ~/downloads/artifacts/linux-x64
 
     - name: download Linux aarch64 build artifact 📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: midori-linux-aarch64
+        name: floorp-linux-aarch64
         path: ~/downloads/artifacts/linux-aarch64
 
     - name: download Windows x86_64 build artifact📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: please-use-this-midori-windows-x86_64-package-build-with-profdata-and-jarlog
+        name: please-use-this-floorp-windows-x86_64-package-build-with-profdata-and-jarlog
         path: ~/downloads/artifacts/windows-x64
 
     - name: download Windows x86 build artifact📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: please-use-this-midori-windows-x86-package-build-with-profdata-and-jarlog
+        name: please-use-this-floorp-windows-x86-package-build-with-profdata-and-jarlog
         path: ~/downloads/artifacts/windows-x86
 
     - name: download macOS Universal build artifact📥
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: Universal-Artifact
         path: ~/downloads/artifacts/macOS-x64
@@ -241,20 +276,34 @@ jobs:
         echo "****************************************************************************************************"
         find . -print | sed -e "s;[^/]*/;|____;g;s;____|; |;g"
         echo "****************************************************************************************************"
+    
+    - name: Create hashes.txt file 📝
+      run: |
+        cd /home/runner/downloads/artifacts
+        touch hashes.txt
+        echo "SHA256 hashes" > hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
+        echo "Linux AArch64" >> hashes.txt
+        sha256sum linux-aarch64/floorp-${{ needs.get-display-version.outputs.display-version }}.linux-aarch64.tar.bz2  >> hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
+        echo "Linux x86_64" >> hashes.txt
+        sha256sum linux-x64/floorp-${{ needs.get-display-version.outputs.display-version }}.linux-x86_64.tar.bz2  >> hashes.txt
+        echo "****************************************************************************************************" >> hashes.txt
 
     - name: Deploy to GitHub Releases for Stable Version 🚀
       id: create_release
-      uses: "softprops/action-gh-release@v1"
+      uses: softprops/action-gh-release@v2
       with:
         files: |
           /home/runner/downloads/artifacts/linux-x64/LINUX-x86_64.mar
           /home/runner/downloads/artifacts/linux-aarch64/LINUX-aarch64.mar
           /home/runner/downloads/artifacts/macOS-x64/DARWIN-Universal.mar
-          /home/runner/downloads/artifacts/linux-x64/midori-*.linux-x86_64.tar.bz2
-          /home/runner/downloads/artifacts/linux-aarch64/midori-*.linux-aarch64.tar.bz2
-          /home/runner/downloads/artifacts/windows-x64/midori-win64.installer.exe
-          /home/runner/downloads/artifacts/windows-x86/midori-win32.installer.exe
-          /home/runner/downloads/artifacts/macOS-x64/midori-macOS-universal.dmg
+          /home/runner/downloads/artifacts/linux-x64/floorp-*.linux-x86_64.tar.bz2
+          /home/runner/downloads/artifacts/linux-aarch64/floorp-*.linux-aarch64.tar.bz2
+          /home/runner/downloads/artifacts/windows-x64/floorp-win64.installer.exe
+          /home/runner/downloads/artifacts/windows-x86/floorp-win32.installer.exe
+          /home/runner/downloads/artifacts/macOS-x64/floorp-macOS-universal.dmg
+          /home/runner/downloads/artifacts/hashes.txt
         tag_name: "v${{ needs.get-display-version.outputs.display-version }}"
         name: "v${{ needs.get-display-version.outputs.display-version }}"
         draft: true
@@ -270,14 +319,14 @@ jobs:
       name: Deploy-to-updater-release
 
     steps:
-    - name: Run GitHub Actions for Release x86_64 Linux MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release x86_64 Linux MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-update/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -287,14 +336,14 @@ jobs:
             }
           }'
 
-    - name: Run GitHub Actions for Release aarch64 Linux MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release aarch64 Linux MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-update/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -305,14 +354,14 @@ jobs:
             }
           }'
 
-    - name: Run GitHub Actions for Release x86_64 Darwin MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release x86_64 Darwin MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-update/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -325,14 +374,14 @@ jobs:
             }
           }'
 
-    - name: Run GitHub Actions for Release aarch64 Darwin MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release aarch64 Darwin MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-update/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -346,14 +395,14 @@ jobs:
             }
           }'
 
-    - name: Run GitHub Actions for Release x86_64 Windows MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release x86_64 Windows MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-update/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -364,14 +413,14 @@ jobs:
             }
           }'
 
-    - name: Run GitHub Actions for Release x86 Windows MAR "goastian/midori-update" 🚀
+    - name: Run GitHub Actions for Release x86 Windows MAR "Floorp-Projects/Floorp-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86 Windows MAR, waiting for 30 seconds"
         sleep 60
         curl -X POST \
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/goastian/midori-updates/actions/workflows/deliver-updates-to-midori-browser.yml/dispatches" \
+          "https://api.github.com/repos/Floorp-Projects/Floorp-Updates/actions/workflows/deliver-updates-to-floorp-browser.yml/dispatches" \
           -d '{
             "ref": "main",
             "inputs": {
@@ -392,7 +441,7 @@ jobs:
             "ref": "ESR115",
             "inputs": {
               "ppa": "true",
-              "tarball-url-x86-64": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.get-display-version.outputs.display-version }}/midori-${{ needs.get-display-version.outputs.display-version }}.linux-x86_64.tar.bz2"
+              "tarball-url-x86-64": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.get-display-version.outputs.display-version }}/floorp-${{ needs.get-display-version.outputs.display-version }}.linux-x86_64.tar.bz2"
             }
           }'
 
@@ -406,6 +455,6 @@ jobs:
             "ref": "ESR115",
             "inputs": {
               "ppa": "false",
-              "tarball-url-x86-64": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.get-display-version.outputs.display-version }}/midori-${{ needs.get-display-version.outputs.display-version }}.linux-x86_64.tar.bz2"
+              "tarball-url-x86-64": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.get-display-version.outputs.display-version }}/floorp-${{ needs.get-display-version.outputs.display-version }}.linux-x86_64.tar.bz2"
             }
           }'
