Bug 1905717 - Add a timeout for geoclue -> GLS fallback. r=saschanaz …
…a=RyanVM

Use 10s which feels it should be enough for geoclue to provide a
reasonable location, without feeling too slow for users.

Still if geoclue eventually gives us a proper location we'd update it
properly and stop the network fallback so this seems reasonable.

I made some naming tweaks for consistency but otherwise it should be
reasonably straight-forward.

Differential Revision: https://phabricator.services.mozilla.com/D215491

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -5665,6 +5665,13 @@
   mirror: always
 #endif
 
+# Time in milliseconds after which geoclue will try to fallback to MLS if no
+# location is received after successful start.
+- name: geo.provider.geoclue.mls_fallback_timeout_ms
+  type: uint32_t
+  value: 10000
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "gfx."
 #---------------------------------------------------------------------------
