--- a/toolkit/components/cleardata/tests/unit/xpcshell.ini
+++ b/toolkit/components/cleardata/tests/unit/xpcshell.ini
@@ -15,5 +15,6 @@ skip-if = condprof  # Bug 1769154 - expected fail w/condprof
 [test_passwords.js]
 [test_permissions.js]
 [test_security_settings.js]
+[test_shutdown_exception_permission.js]
 [test_storage_permission.js]
 [test_quota.js]
